--- a/hs3.tex
+++ b/hs3.tex
@@ -108,29 +108,38 @@ The tropopause-layer temperature in hurricanes (Fig. \ref{fig:tline-int} left, r
 Although the composite-average temperatures for both categories are nearly identical 3 km below the tropopause, the two temperature profiles diverge with height up to the tropopause, where the average temperature in hurricanes is -75.8\textdegree{}C and in weak TCs -73.5\textdegree{}C.
 This divergence in the temperature profiles corresponds to a steeper vertical temperature gradient below the tropopause in hurricanes than in weak TCs (Fig. \ref{fig:tline-int}, center), which is consistent with the smaller upper-tropospheric static stability observed in hurricanes by \cite{DuranMolinari2016}.
 Curiously, the composite-average temperature in hurricanes remains colder than that in weak TCs all the way past 3 km above the tropopause, although the temperature difference decreases with height.
-The convergence of the temperature profiles with height above the tropopause corresponds to a larger lower-stratospheric vertical temperature gradient in hurricanes than in weak TCs (Fig. \ref{fig:tline-int}, center), which suggests that hurricanes are characterized by stronger static stability in the lower stratospheres.
+The convergence of the temperature profiles with height above the tropopause corresponds to a larger lower-stratospheric vertical temperature gradient in hurricanes than in weak TCs (Fig. \ref{fig:tline-int}, center), which suggests that hurricanes are characterized by stronger static stability in the lower stratosphere.
 These results show that the effect of hurricanes on the thermodynamic environment is not limited to the troposphere; rather, their effects can extend far above the tropopause.
 
 The second derivative of temperature with respect to height (Fig. \ref{fig:tline-int}, right) can be thought of as a measure of the "sharpness" of the tropopause.
 Although this quantity is nearly identical in hurricanes and weak TCs throughout most of the tropopause layer, it is larger in hurricanes at and just above the tropopause than in weak TCs.
-This suggests that, on average, the tropopause is sharper (i.e., the vertical temperature gradient changes more rapidly with height) at the tropopuase in hurricanes than in weak TCs.
+This suggests that, on average, the tropopause is sharper (i.e., the vertical temperature gradient changes more rapidly with height) at the tropopause in hurricanes than in weak TCs.
 
 \subsubsection{Sensitivity of the tropopause-layer thermodynamic structure to the infrared brightness temperature environment}
 The HS3 observations shown in Section \ref{hs3-irbt} suggested that there might be some connection between the upper-tropospheric thermodynamic structure and the cloud environment.
 To assess this potential connection in a larger number of storms, each rawinsonde in the dataset is assigned an infrared brightness temperature based on its location and time of release.
 The brightness temperatures come from the GridSat-B1 Climate Data Record (CDR), which is a calibrated infrared brightness temperature dataset with 8-km resolution \cite{Knappetal2011}.
-Although Gridsat's relatively coarse 8-km resolution precludes observation of the coldest cloud tops in TCs associated with individual overshooting updrafts (e.g. \citeauthor{Griffin2017} \citeyear{Griffin2017}), its resolution is sufficient to discriminate between cloud-free areas and mesoscale regions of very cold cloud tops.
+Although Gridsat's relatively coarse resolution precludes observation of the coldest cloud tops in TCs associated with individual overshooting updrafts (e.g. \citeauthor{Griffin2017} \citeyear{Griffin2017}), its resolution is sufficient to discriminate between cloud-free areas and mesoscale regions of very cold cloud tops.
 
-The rawinsondes were stratified into three bins according brightness temperature: colder than -50\textdegree{}C (Fig. \ref{fig:tline-ir}, magenta lines), between -30\textdegree{}C and -50\textdegree{}C (Fig. \ref{fig:tline-ir}, red lines), and warmer than -30\textdegree{}C (Fig. \ref{fig:tline-ir}, blue lines).
+The rawinsondes are stratified into three bins according brightness temperature: colder than -50\textdegree{}C (Fig. \ref{fig:tline-ir}, magenta lines), between -30\textdegree{}C and -50\textdegree{}C (Fig. \ref{fig:tline-ir}, red lines), and warmer than -30\textdegree{}C (Fig. \ref{fig:tline-ir}, blue lines).
 The left panel of Fig. \ref{fig:tline-ir} indicates that the colder the infrared brightness temperature in which the rawinsonde was released, the colder the upper-tropospheric and lower-stratospheric temperature observed by that rawinsonde.
 Above the tropopause, the temperature differences are nearly constant with height, which is reflected in the very similar vertical temperature gradients observed for each of the categories (Fig. \ref{fig:tline-ir}, center panel).
 These results suggest that deep convection within TCs alters the vertical temperature profile not only in the troposphere, but also well into the lower stratosphere.
-
+The second derivative of temperature with respect to height (Fig. (\ref{fig:tline-ir}, right panel) also indicates that regions with colder infrared brightness temperatures are characterized by a sharper tropopause.
+This result is consistent with the subjective analysis conducting using HS3 dropsondes in Section \ref{hs3-irbt}.
 
 %---------------------------------------------------------------------------------------%
-\section{Discussion}
+\section{Discussion and ongoing work}
 \label{sec:discussion}
 %---------------------------------------------------------------------------------------%
+In summary, the large rawinsonde dataset of \cite{DuranMolinari2016} reveals that not only do TCs affect the tropopause layer, but they also modify the thermodynamic profile well into the lower stratosphere.
+These results are consistent with previous papers (e.g. \citeauthor{KuangBretherton2004} \citeyear{KuangBretherton2004}; \citeauthor{Salbyetal2003} \citeyear{Salbyetal2003}) that highlight the lower-stratospheric cooling effect of large-scale tropical convection.
+Since tropopause height and lower-stratospheric temperature are a function of latitude (e.g. \citeauthor{HighwoodHoskins1998} \citeyear{HighwoodHoskins1998}), a next step would be to investigate whether the TC tropopause structure differs between high-latitude TCs and low-latitude TCs.
+%It is possible that upper-tropospheric double stable layers like those observed in Hurricane Nadine (2012; see Fig. \ref{fig:nadine-n2}b) are more common at higher latitudes than at lower latitudes.
+
+The rawinsonde observations also reveal that regions of colder cloud tops are characterized by a sharper tropopause than regions of warmer cloud tops or regions devoid of cloud.
+These results confirm the conclusions of the subjective analysis that was described in Section \ref{hs3-irbt} using the HS3 dropsonde dataset.
+To confirm the presence of multiple stable layers in regions of cold cirrus, an objective algorithm is currently under development to detect multiple stability maxima in the tropopause layer.
 
 %---------------------------------------------------------------------------------------%
 %FIGURES AND TABLES
