--- a/patricia.tex
+++ b/patricia.tex
@@ -8,9 +8,9 @@
 \label{chapter:patricia}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
-\textbf{Published in Monthly Weather Review:}
+%\textbf{Published in Monthly Weather Review:}
 
-\noindent Duran, P., and J. Molinari, 2018: Dramatic inner-core tropopause variability during the rapid intensification of Hurricane Patricia (2015). \textit{Mon. Wea. Rev.}, \textbf{146}, 119–134.
+%\noindent Duran, P., and J. Molinari, 2018: Dramatic inner-core tropopause variability during the rapid intensification of Hurricane Patricia (2015). \textit{Mon. Wea. Rev.}, \textbf{146}, 119–134.
 
 %---------------------------------------------------------------------------------------%
 \section{Introduction}
@@ -164,7 +164,7 @@ Mixing will tend to increase $\theta$ below the stable layer and decrease $\thet
 The 24-h $\theta$ change during the 21--22 October period (Fig. \ref{fig:dtheta}a) shows precisely this structure---with $\theta$ tendencies maximized in a shallow, horizontally extended layer immediately surrounding the tropopause---an indication that turbulent mixing might have played a role in weakening the TIL early in the period.
 This hypothesis is supported by previous work that observed layers conducive to turbulence in the upper levels of hurricanes (\citeauthor{Molinarietal2014} \citeyear{Molinarietal2014}; \citeauthor{DuranMolinari2016} \citeyear{DuranMolinari2016}) and radar observations of upper-tropospheric turbulence in TCs \citep{Dasetal2008}.
 
-Observations of IR brightness temperature during this period suggest that overshooting convection might have acted as an agent of this mixing, consistent with previous observations and numerical simulations (e.g.,\citeauthor{Danielsen1993} \citeyear{Danielsen1993}; \citeauthor{Salbyetal2003} \citeyear{Salbyetal2003}).
+Observations of IR brightness temperature during this period suggest that overshooting convection might have acted as an agent of this mixing, consistent with previous observations and numerical simulations (e.g., \citeauthor{Danielsen1993} \citeyear{Danielsen1993}; \citeauthor{Salbyetal2003} \citeyear{Salbyetal2003}).
 The time evolution of overshooting convection throughout Patricia’s lifetime is expressed in Fig. \ref{fig:hovmoller}  as a radius--time diagram.
 This plot is created by counting the number of IR pixels colder than -80\textdegree{}C in a 5-km-wide annulus and dividing by the total number of pixels in that annulus.
 This is performed out to the 300-km radius using GOES-13 imagery every 30 min throughout Patricia’s lifetime, and the percentages are plotted at the midpoint of each annulus.
