--- a/turb.tex
+++ b/turb.tex
@@ -8,9 +8,9 @@
 \label{chapter:turb}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
-\textbf{Published in Journal of the Atmospheric Sciences:}
+%\textbf{Published in Journal of the Atmospheric Sciences:}
 
-\noindent Duran, P., and J. Molinari, 2016: Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle. \textit{J. Atmos. Sci.}, \textbf{73}, 545–554.
+%\noindent Duran, P., and J. Molinari, 2016: Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle. \textit{J. Atmos. Sci.}, \textbf{73}, 545–554.
 
 
 %---------------------------------------------------------------------------------------%
