Some minor revisions for typos.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -147,7 +147,7 @@ pages = {2085-2102}
 @misc{Brown2013,
 author = {Brown, D. P.},
 year   = {2013},
-title  = {{Tropical Cyclone Report: Hurricane Natricia. National Hurricane Center}},
+title  = {{Tropical Cyclone Report: Hurricane Patricia. National Hurricane Center}},
 note   = {[Available online at www.nhc.noaa.gov]}
 }
 
