--- a/hs3.tex
+++ b/hs3.tex
@@ -20,14 +20,14 @@ Then the static stability structure of a large number of TCs is analyzed using t
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
 %---------------------------------------------------------------------------------------%
-Hurricane Nadine (2012), a long-lived TC in the North Atlantic, was the focus of five research flights conducted by a NASA Global Hawk aicraft during HS3 \citep{Braunetal2016}.
+Hurricane Nadine (2012), a long-lived TC in the North Atlantic, was the focus of five research flights conducted by a NASA Global Hawk aircraft during HS3 \citep{Braunetal2016}.
 The second research flight into the storm deployed 70 dropsondes \cite{Young2016} while Nadine intensified from a tropical storm to a category 1 hurricane \citep{Brown2013} on 14 September 2012.
 These dropsondes, deployed from the lower stratosphere, provided full-tropospheric profiles of temperature, humidity, and wind across a broad region of the storm.
 The observations were interpolated to a 100-m vertical grid following \cite{MolinariVollaro2010} and the static stability ($N^2$) was computed following \cite{DuranMolinari2018}.
 A great strength of the HS3 dropsonde dataset is that it provides numerous high-resolution soundings within and around individual TCs during short time periods.
 This strength will be leveraged to analyze the tropopause-layer static stability structure of Nadine as it intensified to hurricane strength.
 
-Although HS3 deployed 965 dropsondes within 1000 km of TCs over three years, providing unprecended dropsonde coverage in TCs, these dropsondes sampled only seven different storms.
+Although HS3 deployed 965 dropsondes within 1000 km of TCs over three years, providing unprecedented dropsonde coverage in TCs, these dropsondes sampled only seven different storms.
 Thus, although numerous observations are available, these observations may not be representative of TCs in general.
 To get a more general sense of the tropopause-layer structure of TCs, the large rawinsonde dataset of \cite{DuranMolinari2016} will be employed.
 This dataset includes 11735 rawinsondes that were launched within 1000 km of TCs between the years 1998-2011\footnote{Note that fewer rawinsondes were included in the \cite{DuranMolinari2016} study because the Richardson number, which was the focus of that paper, requires both winds and thermodynamic observations. Many soundings were excluded from that analysis due to missing wind observations in the upper troposphere.}.
@@ -63,7 +63,7 @@ The cross-sections are constructed along the flight track, with each of the drop
 The dropsondes deployed within Nadine's cirrus canopy (Fig. \ref{fig:nadine-n2}a,b) detected two distinct static stability maxima in the 12-17-km layer.
 One maximum was associated with a rapid increase in $N^2$ above the cold-point tropopause, which was located near the 16-km level.
 This stability maximum is quite similar to that observed outside of the eye in Hurricane Patricia \citep{DuranMolinari2018} and is consistent with the tropopause inversion layer noted by \cite{Wirth2003}.
-The second existed within the 13.5--15-km layer, where a horizontally-extended region of enhanced static stability was present everwhere within Nadine's cirrus canopy.
+The second existed within the 13.5--15-km layer, where a horizontally-extended region of enhanced static stability was present everywhere within Nadine's cirrus canopy.
 Within this lower stable layer, $N^2$ was largest in the two soundings that were deployed at locations where the infrared brightness temperature was colder than -55\textdegree{}C (dropsondes number 4 and 7).
 The static stability also maximized at a slightly higher altitude in these two soundings (14.4 and 14.5 km) than in the other soundings, which showed an $N^2$ maximum closer to 14 km.
 
@@ -74,7 +74,7 @@ Likewise, there were a few weak, isolated local maxima in $N^2$ within the 12-15
 
 These observations suggest that there might be processes unique to the TC cirrus canopy that produce stronger static stability above the cold-point tropopause and a secondary stability maximum below the tropopause.
 
-\subsection{The relationship between infrared brightness temperature and the tropopause-layer temperature profile obseved by HS3 dropsondes}
+\subsection{The relationship between infrared brightness temperature and the tropopause-layer temperature profile observed by HS3 dropsondes}
 \label{hs3-irbt}
 
 To get a more general sense of the relationship between infrared brightness temperature and the upper-tropospheric static stability structure, all HS3 dropsondes deployed within 500 km of TCs were analyzed.
