--- a/modeling.tex
+++ b/modeling.tex
@@ -361,7 +361,7 @@ The most notable difference between these two initial soundings is the dew point
 The 100-km-average sounding (Fig.~\ref{fig:cfsr-skewt}a) is more moist throughout the depth of the troposphere than the 1000-km average sounding (Fig.~\ref{fig:cfsr-skewt}b).
 This more saturated environment, which should more readily support persistent organized convection, could account for the more rapid intensification of the 100-km-average TC.
 
-%Alghough the less-rapid development in the 1000-km TC delays the strengthening of the lower-stratospheric stable layer, the $N^2$ evolution is quite similar once the RI begins.
+%Although the less-rapid development in the 1000-km TC delays the strengthening of the lower-stratospheric stable layer, the $N^2$ evolution is quite similar once the RI begins.
 Twenty-four-hour averages of $N^2$ from the 1000-km-average simulation are plotted in Fig. \ref{fig:n2-1000km}.
 Although the lower-stratospheric stable layer developed more slowly than that shown in Fig.~\ref{fig:n2-24hr-avgs}, the overall evolution was quite similar once RI commenced, and the same budget terms dominated the tropopause-layer $N^2$ evolution (Fig.~\ref{fig:avgbudterms-run07}).
 
@@ -373,7 +373,7 @@ Although the lower-stratospheric stable layer developed more slowly than that sh
 The rate of turbulent mixing in the Smagorinsky scheme used here is highly dependent on a prescribed length scale.
 The vertical mixing length of the simulation described in Section \ref{modelsetup}, 100 m, was based on the sensitivity experiments of \cite{Bryan2012}.
 %Prescribing a smaller mixing length produces smaller $\theta$ tendencies due to turbulence, but even with a mixing length on the low end of those tested by \cite{Bryan2012}, turbulence still plays an important role in the tropopause-layer $N^2$ evolution.
-Prescribing a smaller vertial mixing length (50 m) delays rapid intensification (Fig. \ref{fig:vmax+pmin-2runs-lv}, blue lines), but the final intensity of this storm closely matches that in the simulation that uses a 100-m mixing length (Fig. \ref{fig:vmax+pmin-2runs-lv}, red lines).
+Prescribing a smaller vertical mixing length (50 m) delays rapid intensification (Fig. \ref{fig:vmax+pmin-2runs-lv}, blue lines), but the final intensity of this storm closely matches that in the simulation that uses a 100-m mixing length (Fig. \ref{fig:vmax+pmin-2runs-lv}, red lines).
 
 The $N^2$ evolution of this simulation (Fig. \ref{fig:n2-50m}) is quite similar to that observed in the simulation which used a 100-m vertical mixing length (Fig. \ref{fig:n2-24hr-avgs}), although the lower-stratospheric $N^2$ maximum developed more slowly (compare Figs. \ref{fig:n2-24hr-avgs}b, \ref{fig:n2-50m}b).
 Although the magnitude of the tropopause-layer $N^2$ forcing by vertical turbulence was smaller in this simulation than in the 100-m-mixing-length simulation (compare Figs. \ref{fig:avgbudterms}, \ref{fig:avgbudterms-run14}, blue lines), vertical turbulence still played an important role in destabilizing the layer immediately surrounding the tropopause and stabilizing the lower stratosphere (Fig. \ref{fig:turb-50m}).
