Begin conclusion.tex.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -40,7 +40,7 @@
 \include{patricia}
 \include{modeling}
 \include{hs3}
-%\include{conclusions}
+\include{conclusion}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
 %\include{appendix}
