--- a/dissertation.tex
+++ b/dissertation.tex
@@ -40,6 +40,7 @@
 \include{patricia}
 \include{modeling}
 \include{hs3}
+\include{conclusion}
 %\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
